--- a/212. Word Search II.ipynb
+++ b/212. Word Search II.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Backtracking (Trie + Hash Set)"
+    "### Backtracking (Trie)"
    ]
   },
   {
@@ -40,60 +40,86 @@
    "source": [
     "from typing import List\n",
     "\n",
-    "class TrieNode():\n",
+    "# 定義 Trie（字典樹）節點結構\n",
+    "class TreeNode:\n",
     "    def __init__(self):\n",
-    "        self.children = {}\n",
-    "        self.end = False\n",
-    "    def add_word(self, word):\n",
-    "        current = self\n",
-    "        for char in word: # time: O(t)\n",
-    "            if char not in current.children:\n",
-    "                current.children[char] = TrieNode()\n",
-    "            current = current.children[char]\n",
+    "        self.children = [None] * 26  # 子節點陣列（對應 26 個英文字母）\n",
+    "        self.ref = 0                 # 記錄有多少單詞經過此節點，用於剪枝\n",
+    "        self.idx = -1                # 若為單詞結尾，紀錄該單詞在 words 中的索引\n",
     "\n",
-    "        current.end = True\n",
+    "    # 將單詞加入 Trie\n",
+    "    def addWord(self, word, word_idx):\n",
+    "        current = self\n",
+    "        current.ref += 1  # 根節點也算被引用一次\n",
+    "        for char in word:  # time: O(t)\n",
+    "            char_idx = ord(char) - ord('a')  # 將字母轉為索引 (a→0, b→1, ...)\n",
+    "            # 若對應子節點不存在，建立新節點\n",
+    "            if not current.children[char_idx]:\n",
+    "                current.children[char_idx] = TreeNode()\n",
+    "            current = current.children[char_idx]\n",
+    "            current.ref += 1  # 經過的每一層節點都增加引用次數\n",
+    "        current.idx = word_idx  # 將單詞結尾節點記錄其索引\n",
+    "\n",
     "\n",
     "class Solution:\n",
     "    def findWords(self, board: List[List[str]], words: List[str]) -> List[str]:\n",
-    "        root = TrieNode()\n",
-    "        for word in words: # time: O(s)，最深為單詞長度 t，但相較於總節點數 s 通常可忽略\n",
-    "            root.add_word(word)\n",
-    "\n",
+    "        root = TreeNode()\n",
+    "        # 將所有單詞加入 Trie\n",
+    "        for i in range(len(words)):  # time: O(s)，最深為單詞長度 t，但相較於總節點數 s 通常可忽略\n",
+    "            root.addWord(word=words[i], word_idx=i)\n",
+    "        \n",
     "        row_length = len(board)\n",
     "        col_length = len(board[0])\n",
-    "            \n",
-    "        result = set()\n",
-    "        visit = set()\n",
+    "        result = []  # 儲存找到的單詞\n",
     "\n",
-    "        def dfs(row, col, node, word):\n",
+    "        # 深度優先搜尋 (DFS)\n",
+    "        def dfs(row, col, node):\n",
+    "            # 邊界條件與無效情況檢查\n",
     "            if (\n",
     "                row < 0 or col < 0 or\n",
     "                row >= row_length or col >= col_length or\n",
-    "                (row, col) in visit or\n",
-    "                board[row][col] not in node.children\n",
+    "                board[row][col] == \"*\" or  # 已訪問過\n",
+    "                not node.children[ord(board[row][col]) - ord('a')]  # 字母不在 Trie 子節點中\n",
     "            ):\n",
     "                return\n",
     "            \n",
-    "            visit.add((row, col))\n",
-    "            node = node.children[board[row][col]]\n",
-    "            word += board[row][col]\n",
-    "            if node.end:\n",
-    "                result.add(word)\n",
+    "            char = board[row][col]               # 暫存目前字母\n",
+    "            char_idx = ord(char) - ord('a')      # 計算索引\n",
     "\n",
+    "            board[row][col] = \"*\"                # 標記為已訪問\n",
+    "            prev = node                          # 保存父節點\n",
+    "            node = node.children[char_idx]       # 進入下一層節點\n",
+    "\n",
+    "            # 若此節點為某個單詞的結尾\n",
+    "            if node.idx != -1:\n",
+    "                result.append(words[node.idx])    # 將該單詞加入結果\n",
+    "                node.idx = -1                     # 避免重複加入 (加速)\n",
+    "                node.ref -= 1                     # 減少引用計數（已找到一個單詞）\n",
+    "                # 若該節點再無其他單詞引用，剪枝：刪除此分支 (加速)\n",
+    "                if node.ref == 0:\n",
+    "                    prev.children[char_idx] = None\n",
+    "                    board[row][col] = char        # 回溯：恢復原字母\n",
+    "                    return \n",
+    "\n",
+    "            # 向四個方向繼續搜尋\n",
     "            # time: O(4)，第一次可以走上下左右 4 個方向\n",
     "            # time: O(3^(t-1))，後續不能回到前一次的位置，只有三個方向\n",
-    "            dfs(row-1, col, node, word)\n",
-    "            dfs(row+1, col, node, word)\n",
-    "            dfs(row, col-1, node, word)\n",
-    "            dfs(row, col+1, node, word)\n",
+    "            dfs(row - 1, col, node)  # 上\n",
+    "            dfs(row + 1, col, node)  # 下\n",
+    "            dfs(row, col - 1, node)  # 左\n",
+    "            dfs(row, col + 1, node)  # 右\n",
     "\n",
-    "            visit.remove((row, col))\n",
+    "            # 回溯：恢復字母，讓其他路徑可使用\n",
+    "            board[row][col] = char\n",
     "\n",
+    "            return\n",
+    "\n",
+    "        # 從每個棋盤格子作為起點進行 DFS 搜尋\n",
     "        for row in range(row_length): # time: O(r)\n",
     "            for col in range(col_length): # time: O(c)\n",
-    "                dfs(row, col, root, '')\n",
+    "                dfs(row, col, root)\n",
     "\n",
-    "        return list(result)"
+    "        return result"
    ]
   },
   {
@@ -124,6 +150,122 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Backtracking (Trie + Hash Set)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(r * c * 4 * 3^{t-1} + s)$**  \n",
+    "**空間複雜度: $O(s)$**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "# 定義 Trie（字典樹）節點\n",
+    "class TrieNode():\n",
+    "    def __init__(self):\n",
+    "        self.children = {}  # 子節點，用字典儲存，例如 {'a': TrieNode, 'b': TrieNode, ...}\n",
+    "        self.end = False    # 標記此節點是否為單詞結尾\n",
+    "\n",
+    "    # 將單詞加入 Trie\n",
+    "    def add_word(self, word):\n",
+    "        current = self\n",
+    "        # 逐字建立 Trie 結構\n",
+    "        for char in word:  # time: O(t)\n",
+    "            if char not in current.children:\n",
+    "                current.children[char] = TrieNode()\n",
+    "            current = current.children[char]\n",
+    "        current.end = True  # 標記單詞結尾\n",
+    "\n",
+    "class Solution:\n",
+    "    def findWords(self, board: List[List[str]], words: List[str]) -> List[str]:\n",
+    "        # 建立 Trie 並插入所有單詞\n",
+    "        root = TrieNode()\n",
+    "        for word in words: # time: O(s)，最深為單詞長度 t，但相較於總節點數 s 通常可忽略\n",
+    "            root.add_word(word)\n",
+    "\n",
+    "        row_length = len(board)\n",
+    "        col_length = len(board[0])\n",
+    "            \n",
+    "        result = set()   # 使用集合避免重複單詞\n",
+    "        visit = set()    # 用來記錄 DFS 過程中已訪問的格子\n",
+    "\n",
+    "        # 定義 DFS 回溯函式\n",
+    "        def dfs(row, col, node, word):\n",
+    "            # 邊界與無效情況檢查\n",
+    "            if (\n",
+    "                row < 0 or col < 0 or\n",
+    "                row >= row_length or col >= col_length or\n",
+    "                (row, col) in visit or\n",
+    "                board[row][col] not in node.children\n",
+    "            ):\n",
+    "                return\n",
+    "            \n",
+    "            # 將當前格子標記為已訪問\n",
+    "            visit.add((row, col))\n",
+    "            # 進入 Trie 的下一層\n",
+    "            node = node.children[board[row][col]]\n",
+    "            # 將當前字母加入組成中的單詞\n",
+    "            word += board[row][col]\n",
+    "            # 若到達單詞結尾，加入結果集合\n",
+    "            if node.end:\n",
+    "                result.add(word)\n",
+    "\n",
+    "            # ---- DFS 四個方向擴展 ----\n",
+    "            # time: O(4)，第一次可以走上下左右 4 個方向\n",
+    "            # time: O(3^(t-1))，後續不能回到前一次的位置，只有三個方向\n",
+    "            dfs(row-1, col, node, word)\n",
+    "            dfs(row+1, col, node, word)\n",
+    "            dfs(row, col-1, node, word)\n",
+    "            dfs(row, col+1, node, word)\n",
+    "\n",
+    "            # ---- 回溯步驟 ----\n",
+    "            visit.remove((row, col))  # 恢復狀態，讓其他路徑能重複使用該格\n",
+    "\n",
+    "        # 從每一個格子作為起點進行 DFS 搜尋\n",
+    "        for row in range(row_length): # time: O(r)\n",
+    "            for col in range(col_length): # time: O(c)\n",
+    "                dfs(row, col, root, '')\n",
+    "\n",
+    "        return list(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['oa', 'oaa']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "board = [[\"o\",\"a\",\"b\",\"n\"],[\"o\",\"t\",\"a\",\"e\"],[\"a\",\"h\",\"k\",\"r\"],[\"a\",\"f\",\"l\",\"v\"]]\n",
+    "words = [\"oa\",\"oaa\"]\n",
+    "# Output: [\"eat\",\"oath\"]\n",
+    "\n",
+    "Solution().findWords(board, words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Backtracking"
    ]
   },
@@ -137,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +354,7 @@
        "['oath', 'eat']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
