--- a/212. Word Search II.ipynb
+++ b/212. Word Search II.ipynb
@@ -130,7 +130,7 @@
     {
      "data": {
       "text/plain": [
-       "['oa', 'oaa']"
+       "['oath', 'eat']"
       ]
      },
      "execution_count": 2,
@@ -139,8 +139,12 @@
     }
    ],
    "source": [
-    "board = [[\"o\",\"a\",\"b\",\"n\"],[\"o\",\"t\",\"a\",\"e\"],[\"a\",\"h\",\"k\",\"r\"],[\"a\",\"f\",\"l\",\"v\"]]\n",
-    "words = [\"oa\",\"oaa\"]\n",
+    "# board = [[\"o\",\"a\",\"b\",\"n\"],[\"o\",\"t\",\"a\",\"e\"],[\"a\",\"h\",\"k\",\"r\"],[\"a\",\"f\",\"l\",\"v\"]]\n",
+    "# words = [\"oa\",\"oaa\"]\n",
+    "# Output: ['oath', 'eat']\n",
+    "\n",
+    "board = [[\"o\",\"a\",\"a\",\"n\"],[\"e\",\"t\",\"a\",\"e\"],[\"i\",\"h\",\"k\",\"r\"],[\"i\",\"f\",\"l\",\"v\"]]\n",
+    "words = [\"oath\",\"pea\",\"eat\",\"rain\"]\n",
     "# Output: [\"eat\",\"oath\"]\n",
     "\n",
     "Solution().findWords(board, words)"
@@ -246,7 +250,7 @@
     {
      "data": {
       "text/plain": [
-       "['oa', 'oaa']"
+       "['oath', 'eat']"
       ]
      },
      "execution_count": 4,
@@ -255,8 +259,12 @@
     }
    ],
    "source": [
-    "board = [[\"o\",\"a\",\"b\",\"n\"],[\"o\",\"t\",\"a\",\"e\"],[\"a\",\"h\",\"k\",\"r\"],[\"a\",\"f\",\"l\",\"v\"]]\n",
-    "words = [\"oa\",\"oaa\"]\n",
+    "# board = [[\"o\",\"a\",\"b\",\"n\"],[\"o\",\"t\",\"a\",\"e\"],[\"a\",\"h\",\"k\",\"r\"],[\"a\",\"f\",\"l\",\"v\"]]\n",
+    "# words = [\"oa\",\"oaa\"]\n",
+    "# Output: ['oath', 'eat']\n",
+    "\n",
+    "board = [[\"o\",\"a\",\"a\",\"n\"],[\"e\",\"t\",\"a\",\"e\"],[\"i\",\"h\",\"k\",\"r\"],[\"i\",\"f\",\"l\",\"v\"]]\n",
+    "words = [\"oath\",\"pea\",\"eat\",\"rain\"]\n",
     "# Output: [\"eat\",\"oath\"]\n",
     "\n",
     "Solution().findWords(board, words)"
@@ -360,6 +368,10 @@
     }
    ],
    "source": [
+    "# board = [[\"o\",\"a\",\"b\",\"n\"],[\"o\",\"t\",\"a\",\"e\"],[\"a\",\"h\",\"k\",\"r\"],[\"a\",\"f\",\"l\",\"v\"]]\n",
+    "# words = [\"oa\",\"oaa\"]\n",
+    "# Output: ['oath', 'eat']\n",
+    "\n",
     "board = [[\"o\",\"a\",\"a\",\"n\"],[\"e\",\"t\",\"a\",\"e\"],[\"i\",\"h\",\"k\",\"r\"],[\"i\",\"f\",\"l\",\"v\"]]\n",
     "words = [\"oath\",\"pea\",\"eat\",\"rain\"]\n",
     "# Output: [\"eat\",\"oath\"]\n",
