--- a/210. Course Schedule II.ipynb
+++ b/210. Course Schedule II.ipynb
@@ -14,8 +14,8 @@
     "**時間複雜度: $O( V + E )$**  \n",
     "**空間複雜度: $O( V + E )$**\n",
     "\n",
-    "- V: 節點數（課程數）\n",
-    "- E: 邊數（先修條件數）"
+    "- V: 節點數(課程數)\n",
+    "- E: 邊數(後續課程數)"
    ]
   },
   {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "[0]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "[]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "[0, 1, 2, 3]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,32 +253,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List\n",
+    "from collections import defaultdict\n",
     "\n",
     "class Solution:\n",
     "    def findOrder(self, numCourses: int, prerequisites: List[List[int]]) -> List[int]:\n",
     "        # 建立鄰接表來表示課程之間的依賴關係圖\n",
     "        # key: 先修課程，value: 後續可以修的課程列表\n",
-    "        graph = {} # space: O(E)，E: 邊數（先修條件數）\n",
-    "        for course, prereq in prerequisites:\n",
-    "            graph[prereq] = graph.get(prereq, []) + [course]\n",
+    "        graph = defaultdict(list) # space: O(V + E)，V: 節點數(課程數)，E: 邊數(後續課程數)\n",
+    "        for course, pre_course in prerequisites:\n",
+    "            graph[pre_course].append(course)\n",
     "        print(f\"{graph=}\\n\")\n",
     "\n",
     "        # 用來追蹤每個課程的狀態\n",
     "        # 0: 未訪問, 1: 正在訪問（用於檢測環）, 2: 已完成訪問\n",
-    "        visited = [0] * numCourses # space: O(V)，V: 節點數（課程數）\n",
+    "        visited = [0] * numCourses # space: O(V)，V: 節點數(課程數)\n",
     "        # 存儲最終的課程修習順序\n",
-    "        result = [] # space: O(V)，V: 節點數（課程數）\n",
+    "        result = [] # space: O(V)，V: 節點數(課程數)\n",
     "\n",
     "        def dfs(course):\n",
     "            print(\"-\"*100)\n",
     "            print(f\"\\n{course=}, {visited=}\")\n",
     "\n",
-    "            # 如果當前課程正在被訪問，表示存在環（循環依賴）\n",
+    "            # 如果當前課程正在被訪問，表示存在環(循環依賴)\n",
     "            if visited[course] == 1:\n",
     "                print(f\"visited[{course}] == 1 -> return False\")\n",
     "                return False\n",
@@ -294,7 +294,7 @@
     "            print(f\"{visited=}\")\n",
     "\n",
     "            # 遍歷當前課程的所有後續課程\n",
-    "            for next_course in graph.get(course, []): # time: O(E)，E: 邊數（先修條件數）\n",
+    "            for next_course in graph[course]: # time: O(E)，E: 邊數(後續課程數)\n",
     "                print(f\"\\n{course=} -> {next_course=}\")\n",
     "                status = dfs(next_course)\n",
     "                print(f\"\\n{course=} -> {next_course=}, {status=}\")\n",
@@ -306,7 +306,7 @@
     "            # 標記當前課程為已完成訪問\n",
     "            visited[course] = 2\n",
     "            # 將當前課程加入結果列表\n",
-    "            # （由於最後會反轉結果，所以這裡是按照完成順序加入）\n",
+    "            # (由於最後會反轉結果，所以這裡是按照完成順序加入)\n",
     "            result.append(course)\n",
     "\n",
     "            print(f\"visited[{course}] = 2\")\n",
@@ -316,7 +316,7 @@
     "            return True\n",
     "\n",
     "        # 對每個課程進行 DFS\n",
-    "        for course in range(numCourses): # time: O(V)，V: 節點數（課程數）\n",
+    "        for course in range(numCourses): # time: O(V)，V: 節點數(課程數)\n",
     "            status = dfs(course)\n",
     "            print(f\"{course=}, {status=}\")\n",
     "            print(\"_\"*100)\n",
@@ -326,20 +326,20 @@
     "                print(f\"return []\")\n",
     "                return []\n",
     "\n",
-    "        # 反轉結果得到正確的修課順序 （因為 DFS 是從後往前加入的）\n",
+    "        # 反轉結果得到正確的修課順序(因為 DFS 是從後往前加入的)\n",
     "        return result[::-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "graph={}\n",
+      "graph=defaultdict(<class 'list'>, {})\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "\n",
@@ -359,7 +359,7 @@
        "[0]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,14 +373,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "graph={0: [1], 1: [0]}\n",
+      "graph=defaultdict(<class 'list'>, {0: [1], 1: [0]})\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "\n",
@@ -417,7 +417,7 @@
        "[]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,14 +431,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "graph={0: [1, 2], 1: [3], 2: [3]}\n",
+      "graph=defaultdict(<class 'list'>, {0: [1, 2], 1: [3], 2: [3]})\n",
       "\n",
       "----------------------------------------------------------------------------------------------------\n",
       "\n",
@@ -520,7 +520,7 @@
        "[0, 2, 1, 3]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -549,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
