--- a/207. Course Schedule.ipynb
+++ b/207. Course Schedule.ipynb
@@ -15,12 +15,91 @@
     "**空間複雜度: $O( V + E )$**\n",
     "\n",
     "- V: 節點數（課程數）\n",
-    "- E: 邊數（先修條件數）"
+    "- E: 邊數（先修課程數）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### BFS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "from collections import deque, defaultdict\n",
+    "\n",
+    "class Solution:\n",
+    "    def canFinish(self, numCourses: int, prerequisites: List[List[int]]) -> bool:\n",
+    "        # 建立入度表，即修該課程需要先修的課程數\n",
+    "        indegree = [0] * numCourses # space: O(V)，V: 節點數(課程數)\n",
+    "\n",
+    "        graph = defaultdict(list) # space: O(V+E)，V: 節點數(課程數)，E: 邊數（先修條件數）\n",
+    "        for course, pre_course in prerequisites:\n",
+    "            graph[pre_course].append(course)\n",
+    "            indegree[course] += 1\n",
+    "\n",
+    "        # 將所有入度為0的課程加入隊列，即可完成的課程\n",
+    "        queue = deque([]) # space: O(V)，V: 節點數（課程數）\n",
+    "        for i in range(numCourses): # time: O(V)，V: 節點數（課程數）\n",
+    "            if indegree[i] == 0:\n",
+    "                queue.append(i)\n",
+    "        \n",
+    "        finish = 0\n",
+    "        while queue: # time: O(V)，V: 節點數（課程數），每個節點只會被處理一次\n",
+    "            course = queue.popleft() # 取出隊列中的節點\n",
+    "            finish += 1 # \n",
+    "\n",
+    "            # 將當前課程的所有後續課程的入度減1\n",
+    "            for next_course in graph[course]: # time: O(E)，E: 邊數（先修條件數）\n",
+    "                indegree[next_course] -= 1\n",
+    "\n",
+    "                # 如果入度變為0，表可完成課程\n",
+    "                if indegree[next_course] == 0:\n",
+    "                    queue.append(next_course)\n",
+    "\n",
+    "        # 如果無法完成所有課程（存在環），返回空列表\n",
+    "        return finish == numCourses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numCourses = 5\n",
+    "prerequisites = [[2,0], [4,2], [2,1], [3,2]]\n",
+    "\n",
+    "Solution().canFinish(numCourses, prerequisites)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### DFS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,38 +109,36 @@
     "class Solution:\n",
     "    def canFinish(self, numCourses: int, prerequisites: List[List[int]]) -> bool:\n",
     "        # 建立鄰接表來表示課程之間的依賴關係圖\n",
-    "        # key: 當前課程，value: 修習該課程前的先修課程列表\n",
-    "        graph = defaultdict(list) # space: O(V + E)，V: 節點數(課程數)，E: 邊數(先修課程數)\n",
+    "        # key: 先修課程，value: 後續可以修的課程列表\n",
+    "        graph = defaultdict(list) # space: O(V + E)，V: 節點數(課程數)，E: 邊數（先修條件數）\n",
     "        for course, pre_course in prerequisites:\n",
-    "            graph[course].append(pre_course)\n",
+    "            graph[pre_course].append(course)\n",
     "\n",
-    "        # 用來追蹤當前 DFS 路徑上正在訪問的課程集合\n",
-    "        # 目的：檢測是否存在環（循環依賴）\n",
-    "        visiting = set() # space: O(V)，V: 節點數(課程數)\n",
+    "        # 用來追蹤每個課程的狀態\n",
+    "        # 0: 未訪問, 1: 正在訪問（用於檢測環）, 2: 已完成訪問\n",
+    "        visited = [0] * numCourses # space: O(V)，V: 節點數(課程數)\n",
     "\n",
     "        def dfs(course):\n",
     "            # 如果當前課程正在被訪問，表示存在環（循環依賴）\n",
-    "            if course in visiting:\n",
+    "            if visited[course] == 1:\n",
     "                return False\n",
     "            \n",
     "            # 如果課程沒有任何先修課 (或已被處理過)，則可直接完成\n",
-    "            if not graph[course]:\n",
+    "            if visited[course] == 2:\n",
     "                return True\n",
     "\n",
     "            # 標記當前課程為正在訪問\n",
-    "            visiting.add(course)\n",
+    "            visited[course] = 1\n",
     "\n",
-    "            # 遍歷當前課程的所有先修課程\n",
-    "            for pre_course in graph[course]: # time: O(E)，E: 邊數(先修課程數)\n",
-    "                state = dfs(pre_course)\n",
-    "                # 如果在遍歷先修課程時發現環，返回 False\n",
+    "            # 遍歷當前課程的所有後續課程\n",
+    "            for next_course in graph[course]: # time: O(E)，E: 邊數（先修條件數）\n",
+    "                state = dfs(next_course)\n",
+    "                # 如果在遍歷後續課程時發現環，返回 False\n",
     "                if not state:\n",
     "                    return False\n",
     "\n",
-    "            # 清除課程正在訪問的標記\n",
-    "            visiting.remove(course)\n",
-    "            # 將當前課程的先修列表清空，表示已經確認此課程及其所有依賴鏈是可行的，加速\n",
-    "            graph[course] = []\n",
+    "            # 標記當前課程為已完成訪問\n",
+    "            visited[course] = 2\n",
     "            return True\n",
     "\n",
     "        # 對每個課程進行 DFS\n",
@@ -77,15 +154,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "numCourses = 5\n",
     "prerequisites = [[2,0], [4,2], [2,1], [3,2]]\n",
     "\n",
     "Solution().canFinish(numCourses, prerequisites)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
