--- a/210. Course Schedule II.ipynb
+++ b/210. Course Schedule II.ipynb
@@ -22,6 +22,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### BFS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- bfs優勢\n",
     "  - 更直觀\n",
     "  - 不容易出現堆疊溢出的問題\n",
@@ -33,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +56,8 @@
     "        # 建立鄰接表來表示課程之間的依賴關係圖\n",
     "        # key: 先修課程，value: 後續可以修的課程列表\n",
     "        graph = {} # space: O(E)，E: 邊數（先修條件數）\n",
-    "        for course, prereq in prerequisites: # time: O(E)，E: 邊數（先修條件數）\n",
-    "            graph[prereq] = graph.get(prereq, []) + [course]\n",
+    "        for course, pre_course in prerequisites: # time: O(E)，E: 邊數（先修條件數）\n",
+    "            graph[pre_course] = graph.get(pre_course, []) + [course]\n",
     "            indegree[course] += 1\n",
     "\n",
     "            print(f\"{graph=}\")\n",
@@ -248,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### dfs"
+    "#### DFS"
    ]
   },
   {
@@ -263,7 +270,7 @@
     "    def findOrder(self, numCourses: int, prerequisites: List[List[int]]) -> List[int]:\n",
     "        # 建立鄰接表來表示課程之間的依賴關係圖\n",
     "        # key: 先修課程，value: 後續可以修的課程列表\n",
-    "        graph = defaultdict(list) # space: O(V + E)，V: 節點數(課程數)，E: 邊數(後續課程數)\n",
+    "        graph = defaultdict(list) # space: O(V + E)，V: 節點數(課程數)，E: 邊數（先修條件數）\n",
     "        for course, pre_course in prerequisites:\n",
     "            graph[pre_course].append(course)\n",
     "        print(f\"{graph=}\\n\")\n",
@@ -294,7 +301,7 @@
     "            print(f\"{visited=}\")\n",
     "\n",
     "            # 遍歷當前課程的所有後續課程\n",
-    "            for next_course in graph[course]: # time: O(E)，E: 邊數(後續課程數)\n",
+    "            for next_course in graph[course]: # time: O(E)，E: 邊數（先修條件數）\n",
     "                print(f\"\\n{course=} -> {next_course=}\")\n",
     "                status = dfs(next_course)\n",
     "                print(f\"\\n{course=} -> {next_course=}, {status=}\")\n",
