--- a/198. House Robber.ipynb
+++ b/198. House Robber.ipynb
@@ -31,7 +31,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def rob(self, nums: List[int]) -> int:\n",
+    "        # last2 (dp[i-2]): 搶劫到前前一個房屋 (i-2) 時的最大累積金額\n",
+    "        last2 = 0  # space: O(1)\n",
+    "        \n",
+    "        # last1 (dp[i-1]): 搶劫到前一個房屋 (i-1) 時的最大累積金額\n",
+    "        last1 = 0  # space: O(1)\n",
+    "\n",
+    "        # 迭代所有房屋\n",
+    "        for num in nums: # time: O(n)\n",
+    "            # current (dp[i])：計算搶劫到當前房屋 i 時的最大金額\n",
+    "            \n",
+    "            # 兩種選擇的最大值：\n",
+    "            # 1. 搶當前房屋 (num)：金額是 (last2 + num)。因為搶了當前房屋，所以前一個房屋 (last1) 不能算。\n",
+    "            # 2. 不搶當前房屋：金額是 (last1)。沿用上一個狀態的最大值。\n",
+    "            current = max(last2 + num, last1)\n",
+    "            \n",
+    "            # 狀態轉移 (State Transition)：更新變量以準備下一輪迭代\n",
+    "            last2 = last1   # 原來的 last1 (i-1) 變為新的 last2 (i-2)\n",
+    "            last1 = current # 原來的 current (i) 變為新的 last1 (i-1)\n",
+    "            \n",
+    "        # last1 最終儲存的就是整個線性房屋序列的最大搶劫金額\n",
+    "        return last1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [2,7,9,3,1]\n",
+    "Solution().rob(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dynamic Programming - optimize\n",
+    "\n",
+    "**時間複雜度: O(n)**  \n",
+    "**空間複雜度: O(1)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +132,7 @@
        "12"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +189,7 @@
        "12"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +202,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -152,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
